tests/errors/syn_call9.java
public class syn_call9{
public static void main(String[] args){
 method(4, 3 ;
}
}